class Colaboracion{
    constructor(personaColaboradora, proyecto){
        this.personaColaboradora = personaColaboradora;
        this.proyecto = proyecto;
    }
}

export default {Colaboracion};
