@startuml CodigoAVoluntad
class Colectivo{
    -id : Number
    -nombre : String
    -descripcion : String
    -ubicacion : String
    -tipoDeColectivo : TipoColectivo
    -proyectos : [Proyecto]

    +cargarProyecto()
}

class Proyecto{
    -id : Number
    -titulo : String
    -descripcion : String
    -habilidadesRequeridas : [Habilidad]
    -horas : Number
    -tipoDeCompromiso : TipoCompromiso
    -modalidadDeColaboracion : ModalidadColaboracion
    -colectivo : Colectivo
    -finalizado : Boolean
}

class Colaboracion{
    -personaColaboradora : PersonaColaboradora
    -proyecto : Proyecto
}

class Habilidad{
    -id : Number
    -titulo : String
    -codigo : String
    -descripcion : String

    +normalizarTitulo()
}


class CatalogoHabilidades{
    -habilidades : [Habilidad]

    +agregarHabilidad(habilidad)
}

class PersonaColaboradora{
    -id : Number
    -nombreFantasia : String
    -git : String
    -nombre : String
    -apellido : String
    -habilidades : [Habilidad]
    -pronombres : String
    -presentacion : String
}

enum ModalidadColaboracion {
    GRATUITA
    INCENTIVO_ECONOMICO
    CONTRATACION_EVENTUAL
}

enum TipoCompromiso {
    TOTAL
    SEMANAL
    MENSUAL
}

enum TipoColectivo {
    FUNDACION
    ONG
    ASOCIACION_BARRIAL
    ASAMBLEAS
}

Colectivo --> "*" Proyecto
PersonaColaboradora -> "*" Habilidad
CatalogoHabilidades -> "*" Habilidad
Habilidad "*" <- Proyecto
Colaboracion --> Proyecto
Colaboracion --> PersonaColaboradora
Colectivo -> TipoColectivo
Proyecto --> ModalidadColaboracion
Proyecto --> TipoCompromiso

@enduml